Changes in registration controller

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -24,11 +24,11 @@
   </div>
 
   <div class="field">
-    <%= f.label :Gender %>
-    <%= f.radio_button :gender, "male" %>
-    <%= f.label :age_child, "Male" %>
-    <%= f.radio_button :gender, "female" %>
-    <%= f.label :age_adult, "Female" %>
+    <%= f.label :Gender %><br />
+    <%= f.label :Male %>
+    <%= f.radio_button :gender, "Male" %>
+    <%= f.label :Female, "Female" %>
+    <%= f.radio_button :gender, "Female" %>
   </div>
 
   <div class="field">
