--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,4 @@
 <%# <h1>Users#index</h1>
 <p>Find me in app/views/users/index.html.erb</p> %>
 
-<%#= link_to "Log Out", destroy_user_session_path, method: :delete, class:"navbar-item btn btn-outline-warning" %>
+<%= link_to "Log Out", destroy_user_session_path, method: :delete, class:"navbar-item btn btn-outline-warning" %>
