--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,78 +1,76 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<div class="row">
+  <div class="col-lg-3 col-md-6 mt-5 ml-auto mr-auto">
+    <h1 class="text-center"><%= t('.title', resource: resource_name.to_s.humanize) %></h1>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+      <%= bootstrap_devise_error_messages! %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+      <div class="form-group">
+        <%= f.label :email %>
+        <%= f.email_field :email, autofocus: true, autocomplete: 'email', class: 'form-control' %>
+      </div>
 
-  <div class="field">
-    <%= f.label 'First Name' %><br />
-    <%= f.text_field :first_name %>
-  </div>
+      <div class="form-group">
+        <%= f.label 'First Name' %>
+        <%= f.text_field :first_name, autofocus: true, autocomplete: 'firt name', class: 'form-control' %>
+      </div>
 
-  <div class="field">
-    <%= f.label 'Last Name' %><br />
-    <%= f.text_field :last_name %>
-  </div>
+      <div class="form-group">
+        <%= f.label 'Last Name' %>
+        <%= f.text_field :last_name, autofocus: true, autocomplete: 'last name', class: 'form-control' %>
+      </div>
 
-  <div class="field">
-    <%= f.label 'Date Of Birth' %><br />
-    <%= f.date_field :date_of_birth %>
-  </div>
+      <div class="form-group">
+        <%= f.label 'Date Of Birth' %>
+        <%= f.date_field :date_of_birth, autofocus: true, autocomplete: 'date of birth', class: 'form-control' %>
+      </div>
 
-  <div class="field">
-    <%= f.label 'Gender' %><br />
-    <%= f.text_field :gender %>
-  </div>
+      <div class="form-group">
+        <%= f.label 'Gender' %>
+        <%= f.text_field :gender, autofocus: true, autocomplete: 'gender', class: 'form-control' %>
+      </div>
 
-  <div class="field">
-    <%= f.label 'Contact Number' %><br />
-    <%= f.text_field :contact_number %>
-  </div>
+      <div class="form-group">
+        <%= f.label 'Contact Number' %>
+        <%= f.text_field :contact_number, autofocus: true, autocomplete: 'gender', class: 'form-control' %>
+      </div>
 
-  <div class="field">
-    <%= f.label 'Address' %><br />
-    <%= f.text_field :address %>
-  </div>
+      <div class="form-group">
+        <%= f.label 'Address' %>
+        <%= f.text_field :address, autofocus: true, autocomplete: 'address', class: 'form-control' %>
+      </div>
 
-  <div class="field">
-    <%= f.label 'Designation' %><br />
-    <%= f.text_field :designation %>
-  </div>
+      <div class="form-group">
+        <%= f.label 'Designation' %>
+        <%= f.text_field :designation, autofocus: true, autocomplete: 'designation', class: 'form-control' %>
+      </div>
 
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
+      <div class="form-group">
+        <%= f.label :password %>
+        <%= f.password_field :password, autocomplete: 'new-password', class: 'form-control' %>
 
-  <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-    <% if @minimum_password_length %>
-      <br />
-      <em><%= @minimum_password_length %> characters minimum</em>
+        <small class="form-text text-muted"><%= t('.leave_blank_if_you_don_t_want_to_change_it') %></small>
+      </div>
+
+      <div class="form-group">
+        <%= f.label :password_confirmation %>
+        <%= f.password_field :password_confirmation, autocomplete: 'new-password', class: 'form-control'  %>
+      </div>
+
+      <div class="form-group">
+        <%= f.label :current_password %>
+        <%= f.password_field :current_password, autocomplete: 'current-password', class: 'form-control' %>
+
+        <small class="form-text text-muted"><%= t('.we_need_your_current_password_to_confirm_your_changes') %></small>
+      </div>
+
+      <div class="form-group">
+        <%= f.submit t('.update'), class: 'btn btn-primary' %>
+      </div>
     <% end %>
-  </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
+    <p><%= t('.unhappy') %>? <%= link_to t('.cancel_my_account'), registration_path(resource_name), data: { confirm: t('.are_you_sure') }, method: :delete %>.</p>
 
-  <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "current-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Update" %>
-  </div>
-<% end %>
-
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
+    <%= link_to t('.back'), :back %>
+  </div>    
+</div> 
