--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,72 +1,78 @@
-<h2>Sign up</h2>
+<div class="row">
+  <div class="col-lg-3 col-md-6 mt-5 ml-auto mr-auto">
+    <h1 class="text-center"><%= t('.sign_up') %></h1>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+      <%= bootstrap_devise_error_messages! %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+      <div class="form-group">
+        <%= f.label :email %>
+        <%= f.email_field :email, autofocus: true, autocomplete: 'email', class: 'form-control' %>
+      </div>
+
+      <div class="form-group">
+        <%= f.label 'First Name' %>
+        <%= f.text_field :first_name, autofocus: true, autocomplete: 'firt name', class: 'form-control' %>
+      </div>
+
+      <div class="form-group">
+        <%= f.label 'Last Name' %>
+        <%= f.text_field :last_name, autofocus: true, autocomplete: 'last name', class: 'form-control' %>
+      </div>
+
+      <div class="form-group">
+        <%= f.label 'Date Of Birth' %>
+        <%= f.date_field :date_of_birth, autofocus: true, autocomplete: 'date of birth', class: 'form-control' %>
+      </div>
+
+      <div class="form-group">
+        <%= f.label :Gender %><br />
+        <%= f.label :Male %>
+        <%= f.radio_button :gender, "Male" %>
+        <%= f.label :Female, "Female" %>
+        <%= f.radio_button :gender, "Female" %>
+      </div>
+
+      <div class="form-group">
+        <%= f.label 'Contact Number' %>
+        <%= f.text_field :contact_number, autofocus: true, autocomplete: 'gender', class: 'form-control' %>
+      </div>
+
+      <div class="form-group">
+        <%= f.label 'Address' %>
+        <%= f.text_area :address, autofocus: true, autocomplete: 'address', class: 'form-control' %>
+      </div>
+
+      <div class="form-group">
+        <%= f.label 'Designation' %>
+        <%= f.text_field :designation, autofocus: true, autocomplete: 'designation', class: 'form-control' %>
+      </div>
+
+      <div class="form-group">
+        <%= f.label :password %>
+        <%= f.password_field :password, autocomplete: 'current-password', class: 'form-control' %>
+
+        <% if @minimum_password_length %>
+          <small class="form-text text-muted"><%= t('devise.shared.minimum_password_length', count: @minimum_password_length) %></small>
+        <% end %>
+      </div>
+
+      <div class="form-group">
+        <%= f.label :password_confirmation %>
+        <%= f.password_field :password_confirmation, autocomplete: 'current-password', class: 'form-control' %>
+      </div>
+
+      <div class="form-group">
+        <%= f.label :role %>
+        <%= f.select :role, User.roles.keys %>
+      </div>
+
+      <div class="form-group">
+        <%= f.submit t('.sign_up'), class: 'btn btn-primary' %>
+      </div>
+    <% end %>
+
+    <%= render 'devise/shared/links' %>
   </div>
-
-  <div class="field">
-    <%= f.label 'First Name' %><br />
-    <%= f.text_field :first_name %>
-  </div>
-
-  <div class="field">
-    <%= f.label 'Last Name' %><br />
-    <%= f.text_field :last_name %>
-  </div>
-
-  <div class="field">
-    <%= f.label 'Date Of Birth' %><br />
-    <%= f.date_field :date_of_birth %>
-  </div>
-
-  <div class="field">
-    <%= f.label :Gender %><br />
-    <%= f.label :Male %>
-    <%= f.radio_button :gender, "Male" %>
-    <%= f.label :Female, "Female" %>
-    <%= f.radio_button :gender, "Female" %>
-  </div>
-
-  <div class="field">
-    <%= f.label 'Contact Number' %><br />
-    <%= f.text_field :contact_number %>
-  </div>
-
-  <div class="field">
-    <%= f.label 'Address' %><br />
-    <%= f.text_area :address %>
-  </div>
-
-  <div class="field">
-    <%= f.label 'Designation' %><br />
-    <%= f.text_field :designation %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :role %>
-    <%= f.select :role, User.roles.keys %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
+    
