--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+
     <title>AttendanceProject</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -10,10 +15,35 @@
   </head>
 
   <body>
-    <%= yield %>
-    
-      <p class="notice"><%= notice %></p>
-      <p class="alert"><%= alert %></p>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <%= link_to 'Attendance Project', root_path, class:"navbar-brand font-weight-bold mb-2" %>
+      <div class="collapse navbar-collapse" id="navbarColor02">
+        <ul class="navbar-nav mr-auto">
+          <% if user_signed_in? %>
 
+            <li class="mt-2 mr-3">
+              <span class="text-white">Logged in as : <b><%= current_user.email %></b></span> 
+            </li>
+
+            <li>
+              <%= link_to "Edit Profile", edit_user_registration_path, class:"navbar-item btn btn-outline-success mt-1"%>
+            </li>
+        </ul>
+        <%= link_to "Logout", destroy_user_session_path, method: :delete, class:"navbar-item btn btn-outline-danger"%>
+                  
+        <% else %>
+          <li>
+            <%= link_to "Sign Up", new_user_registration_path, class:"navbar-item btn btn-outline-info mr-3" %>
+          </li>
+
+          <li>
+            <%= link_to "Sign In", new_user_session_path, class:"navbar-item btn btn-outline-info" %>
+          </li>
+        <% end %>
+      </div>
+    </nav>
+    <%= yield %>    
+      <p class="notice text-center text-danger"><%= notice %></p>
+      <p class="alert text-center text-danger"><%= alert %></p>
   </body>
 </html>
