updating data in seed file

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -26,8 +26,11 @@
       </div>
 
       <div class="form-group">
-        <%= f.label 'Gender' %>
-        <%= f.text_field :gender, autofocus: true, autocomplete: 'gender', class: 'form-control' %>
+        <%= f.label :Gender %><br />
+        <%= f.label :Male %>
+        <%= f.radio_button :gender, "Male" %>
+        <%= f.label :Female, "Female" %>
+        <%= f.radio_button :gender, "Female" %>
       </div>
 
       <div class="form-group">
