Changes in migration and added add attendance feature

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -29,7 +29,7 @@
         <%= f.label :Gender %><br />
         <%= f.label :Male %>
         <%= f.radio_button :gender, "Male" %>
-        <%= f.label :Female, "Female" %>
+        <%= f.label :Female %>
         <%= f.radio_button :gender, "Female" %>
       </div>
 
