--- a/app/views/attendance_reports/new.html.erb
+++ b/app/views/attendance_reports/new.html.erb
@@ -1,4 +1,6 @@
-<%= form_with(model: attendance_report) do |form| %>
+<h3 class="float-right"><%= Date.today %></h3>
+<div class="col-lg-3 mx-lg-auto" >
+<%= form_for @attendance_report, url: [@user, @attendance_report], local: true do |form| %>
   <% if @attendance_report.errors.present? %>
     <div id="error_explanation">
       <h2><%= pluralize(@attendance_report.errors.count, "error") %> prohibited this card from being saved:</h2>
@@ -9,45 +11,28 @@
       </ul>
     </div>
   <% end %>
+ 
+  <h1><%= "Hello, #{@user.first_name}" %></h1>
 
-  <div class="field">
-    <%= form.label :first_name %>
-    <%= form.text_field :first_name %>
+  <%= form.hidden_field :user_id, class: 'form-control' %>
+
+  <div class="form-group">
+    <%= form.label :date %>
+    <%= form.text_field :date, value: Date.today, class: 'form-control', autocomplete: 'off' %>
   </div>
 
-  <div class="field">
-    <%= form.label :last_name %>
-    <%= form.text_field :last_name %>
+  <div class="form-group">
+    <%= form.label :Attendance %>
+    <%= form.select :attendance, [['Present', true], ['Absent', false]] %>
   </div>
 
-  <div class="field">
-    <%= form.label :date_of_birth %>
-    <%= form.number_field :date_of_birth %>
+  <div class="form-group">
+    <%= form.label :Status %>
+    <%= form.select :status, AttendanceReport.statuses.keys %>
   </div>
 
-  <div class="field">
-    <%= form.label :gender %>
-    <%= form.number_field :gender %>
-  </div>
-
-  <div class="field">
-    <%= form.label :contact_number %>
-    <%= form.date_select :contact_number %>
-  </div>
-
-  <div class="field">
-    <%= form.label :address %>
-    <%= form.date_select :address %>
-  </div>
-
-  <div class="field">
-    <%= form.label :desgination %>
-    <%= form.date_select :desgination %>
-  </div>
-
-  <div class="actions">
-    <%= form.submit %>
+  <div class="form-group">
+    <%= form.submit "Create Attendance", class: 'btn btn-primary', value: 'Add Attendence' %>
   </div>
 <% end %>
-
 </div>
