--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,32 +1,3 @@
-<div class="container mt-5">
-    <% if current_user.role == 'employee'%>
-    <h1><%= "Hello, #{current_user.first_name}." %></h1>
-        <p id="notice"><%= notice %></p>
-		<div class="well col-lg-12">
-			<table id="table" class="table table-bordered table-striped">
-				<thead>
-					<tr>
-						<th>First Name</th>
-						<th>Last Name</th>
-						<th>Date Of Birth</th>
-						<th>Action</th>
-					</tr>
-				</thead>
-				<tbody>
-                    <tr>
-                        <td><%= current_user.first_name %></td>
-                        <td><%= current_user.last_name %></td>
-                        <td><%= current_user.date_of_birth %></td>
-                        <%= link_to "Create Attendance", new_user_attendance_report_path(current_user.id), class:"btn btn-primary" %>
-                    </tr>
-				</tbody>
-			</table>
-		</div>
-    <% elsif current_user.role == 'hr' %>
-        <h1>"Hello, I am HR"</h1>
-        <%= render 'index', users: @users %>
-    <% else %>
-        <h1>"Hello, I am Admin"</h1>
-        <%= render 'index', users: @users %>
-    <% end %>
-</div>
+<h3>User</h3>
+<p>Name: <%= @user.first_name if @user.first_name %></p>
+<p>Email: <%= @user.email if @user.email %></p>
