--- a/app/views/workdays/new.html.erb
+++ b/app/views/workdays/new.html.erb
@@ -1,20 +1,23 @@
-<h3 class="float-right"><%= Date.today %></h3>
+<h3 class=""><%= Date.today %></h3>
 <div class="col-lg-3 mx-lg-auto" >
-<%= form_for @attendance_report, url: [@user, @attendance_report], local: true do |form| %>
-  <% if @attendance_report.errors.present? %>
+<%= form_for @workday, url: [@user, @workday], local: true do |form| %>
+  <% if @workday.errors.present? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@attendance_report.errors.count, "error") %> prohibited this card from being saved:</h2>
+      <h2><%= pluralize(@workday.errors.count, "error") %> prohibited this card from being saved:</h2>
       <ul>
-        <% @attendance_report.errors.full_messages.each do |error| %>
+        <% @workday.errors.full_messages.each do |error| %>
           <li><%= error %></li>
         <% end %>
       </ul>
     </div>
   <% end %>
- 
-  <h1><%= "Hello, #{@user.first_name}" %></h1>
 
   <%= form.hidden_field :user_id, class: 'form-control' %>
+
+  <div class="form-group">
+    <%= form.label :day %>
+    <%= form.text_field :day, value: Date.today.strftime("%A"), class: 'form-control', autocomplete: 'off' %>
+  </div>
 
   <div class="form-group">
     <%= form.label :date %>
@@ -28,11 +31,12 @@
 
   <div class="form-group">
     <%= form.label :Status %>
-    <%= form.select :status, AttendanceReport.statuses.keys %>
+    <%= form.select :status, Workday.statuses.keys %>
   </div>
 
   <div class="form-group">
     <%= form.submit "Create Attendance", class: 'btn btn-primary', value: 'Add Attendence' %>
   </div>
-<% end %>
-</div>
+
+  <% end %>
+  </div>
