Changes in user admin views

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container mt-5">
+<div class="container-fluid mt-5">
     <% if current_user.role == 'employee'%>
       <h1><%= "Hello, #{current_user.first_name}." %></h1>
       <div class="well col-lg-12">
