--- a/app/views/workdays/new.html.erb
+++ b/app/views/workdays/new.html.erb
@@ -26,7 +26,7 @@
 
   <div class="form-group">
     <%= form.label :Attendance %>
-    <%= form.select :attendance, [['Present', true], ['Absent', false]] %>
+    <%= form.select :attendance, [['Present', true], ['Absent', false]], class: 'form-control' %>
   </div>
 
   <div class="form-group">
