--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,24 +1,96 @@
-<div class="container-fluid mt-5">
+
+<div class="container mt-5">
     <% if current_user.role == 'employee'%>
       <h1><%= "Hello, #{current_user.first_name}." %></h1>
-      <div class="well col-lg-12">
-        <table id="table" class="table table-bordered table-striped">
-          <thead>
-            <tr>
-              <th>First Name</th>
-              <th>Last Name</th>
-              <th>Date Of Birth</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-                <td><%= current_user.first_name %></td>
-                <td><%= current_user.last_name %></td>
-                <td><%= current_user.date_of_birth %></td>
-            </tr>
-          </tbody>
-        </table>
-        <%= link_to "Create attendance" , new_user_workday_path(current_user.id) %>
+
+<style>
+.card-body {
+    background: #54b9ab;
+    text-align: center;
+    padding: 20px;
+}
+.current {
+    margin-top: 35px;
+}
+.btn-info {
+    color: #fff;
+    background-color: #54b9ab;
+    border-color: #54b9ab;
+}
+.text-white {
+    color: #000 !important;
+}
+</style>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
+<div class="col-lg-12">
+    <div class="col-md-6 stretch-card grid-margin">
+      <div class="card bg-gradient-danger card-img-holder text-white">
+        <div class="card-body">
+           <h4 class="font-weight-normal mb-3">Month<i class="mdi mdi-chart-line mdi-24px float-right"></i></h4>
+          <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#exampleModal">Avg Attendance</button>
+          <!-- Modal -->
+            <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+              <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <%= render "attendance", users: @user %>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-md-6 stretch-card grid-margin">
+      <div class="card bg-gradient-danger card-img-holder text-white">
+        <div class="card-body">
+            <h4 class="font-weight-normal mb-3">Year<i class="mdi mdi-chart-line mdi-24px float-right"></i></h4>       
+            <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Holiday</button>
+          <div class="modal fade" id="myModal" role="dialog">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header"> 
+                <button type="button" class="close" data-dismiss="modal">&times;</button>        
+                  <%= render "holiday", users: @user %>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>  
+</div>
+
+<div class="col-lg-12">
+    <div class="current">
+      <div class="col-md-6 stretch-card grid-margin">
+        <div class="card bg-gradient-danger card-img-holder text-white">
+            <div class="card-body">
+              <h4 class="font-weight-normal mb-3">Month<i class="mdi mdi-chart-line mdi-24px float-right"></i></h4>
+              <h2 class="mb-5">Leaves</h2>
+            </div>
+        </div>
+      </div>
+    </div>
+
+
+  <div class="current">
+    <div class="col-md-6 stretch-card grid-margin">
+        <div class="card bg-gradient-danger card-img-holder text-white">
+            <div class="card-body">
+              <h4 class="font-weight-normal mb-3">Day<i class="mdi mdi-chart-line mdi-24px float-right"></i></h4>
+              <h2 class="mb-5">Current Work</h2>
+            </div>
+        </div>
+    </div>
+  </div>
+</div>
     <% elsif current_user.role == 'hr' %>
       <h1><%= "Hello, #{current_user.first_name}(HR)" %></h1>
       <%= render current_user %>
@@ -27,5 +99,3 @@
       <%= render current_user %>
     <% end %>
 </div>
-
-
