--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,29 +7,15 @@
 
     <%= stylesheet_link_tag  'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-
-    
   </head>
-
-  
-
   <body>
     <nav class="navbar navbar-expand-lg  navbar-dark bg-dark">
       <%= link_to 'Attendance Project', root_path, class:"navbar-brand font-weight-bold mb-2 mt-2" %>
       <div class="collapse navbar-collapse" id="navbarColor02">
-        <ul class="navbar-nav mr-auto">
-          <% if user_signed_in? %>
-
-            <li class="mt-2 mr-3">
-              <span class="text-white">Logged in as : <b><%= current_user.email %></b></span> 
-            </li>
-
-            <li>
-              <%= link_to "Edit Profile", edit_user_registration_path, class:"navbar-item btn btn-outline-success mt-1"%>
-            </li>
-        </ul>
-        <%= link_to "Logout", destroy_user_session_path, method: :delete, class:"navbar-item btn btn-outline-danger mt-1"%>
-                  
+        <% if user_signed_in? %>
+        <% if current_user.role == 'employee' %>
+        <% end %>
+          <%= render 'layouts/top_menu' %> 
         <% else %>
           <li>
             <%= link_to "Sign Up", new_user_registration_path, class:"navbar-item btn btn-outline-info mr-3" %>
@@ -41,7 +27,7 @@
         <% end %>
       </div>
     </nav>
-    <%= yield %>    
+    <%= yield %><br>    
       <p class="notice text-center text-danger"><%= notice %></p>
       <p class="alert text-center text-danger"><%= alert %></p>
   </body>
