--- a/app/views/users/_total_employees.html.erb
+++ b/app/views/users/_total_employees.html.erb
@@ -1,35 +1,37 @@
-<h1>Total Employees</h1>
-<div class="table-wrapper-scroll-y my-custom-scrollbar">
-<table class="table table-bordered table-striped mb-0">
-  <thead>
-    <tr>
-      <th>First Name</th>
-      <th>Last Name</th>
-      <th>Email</th>
-      <th>DOB</th>
-      <th>Gender</th>
-      <th>Contact</th>
-      <th>Address</th>
-      <th>Designation</th>
-      
-    </tr>
-  </thead>
-  <tbody>
-    <%= "Total Employees: #{@users.count}" %>
-    <% @users.each do |user| %>
-      <% if user.role == "employee" %>
+<div class="container mt-5">
+  <h1>Total Employees</h1>
+  <div class="table-wrapper-scroll-y my-custom-scrollbar">
+    <table class="table table-bordered table-striped mb-4">
+      <thead>
         <tr>
-          <td><%= user.first_name %></td>
-          <td><%= user.last_name %></td>
-          <td><%= user.email %></td>
-          <td><%= user.date_of_birth %></td>
-          <td><%= user.gender %></td>
-          <td><%= user.contact_number %></td>
-          <td><%= user.address %></td>
-          <td><%= user.designation %></td>
+          <th>First Name</th>
+          <th>Last Name</th>
+          <th>Email</th>
+          <th>DOB</th>
+          <th>Gender</th>
+          <th>Contact</th>
+          <th>Address</th>
+          <th>Designation</th>
+          
         </tr>
-      <% end %>
-    <% end %>
-  </tbody>
-</table>
+      </thead>
+      <tbody>
+        <%= "Total Employees: #{@users.count}" %>
+        <% @users.each do |user| %>
+          <% if user.role == "employee" %>
+            <tr>
+              <td><%= user.first_name %></td>
+              <td><%= user.last_name %></td>
+              <td><%= user.email %></td>
+              <td><%= user.date_of_birth %></td>
+              <td><%= user.gender %></td>
+              <td><%= user.contact_number %></td>
+              <td><%= user.address %></td>
+              <td><%= user.designation %></td>
+            </tr>
+          <% end %>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
 </div>
