--- a/app/views/leaves/edit.html.erb
+++ b/app/views/leaves/edit.html.erb
@@ -1,12 +1,8 @@
 
 <%#= form_with model: @leave, url: edit_user_leave_path, local: true do |form| %>
-<%= form_with model: @leave, url: user_leave_path, local: true do |form| %>
-
-  <p>
-    <%= form.label :Status %><br>
-    <%= form.text_field :status %>
-  </p>
-
+<div class="field_edit">
+  <fieldset>
+<%= form_with model: @leave, url: user_leave_path, local: true do |form| %> 
   <p>
     <%= form.label :reason %><br>
     <%= form.text_field :reason %>
@@ -26,8 +22,10 @@
     <%= form.label :end_date %><br>
     <%= form.date_field :end_date %>
   </p>
-  
-  <p>
+  <%= form.select :status, ['Pandind', 'Approval', 'Rejected'] %><br />
+  <p><br />
     <%= form.submit %>
   </p>
 <% end %>
+</fieldset>
+</div>
