--- a/app/views/users/_employee.html.erb
+++ b/app/views/users/_employee.html.erb
@@ -18,6 +18,10 @@
     .text-white {
       color: #000 !important;
     }
+    .modal-content {
+      width: fit-content;
+    }
+
   </style>
   <div class="row">
     <div class="col-md-6 stretch-card grid-margin">
@@ -60,7 +64,16 @@
     <div class="col-md-6 stretch-card grid-margin">
       <div class="card card-img-holder text-white">
         <div class="card-body">
-          <h2>Leaves</h2>
+        <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#thisModal">Leave</button>
+          <div class="modal fade" id="thisModal" role="dialog">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <%= render "users/create_leaves", users: @user %>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
